# ocr

./: LOG.TXT  app.py  kishor.avif  main.py  minicpm.py  ocr.py  prompt.py  pyproject.toml  try.py
