[project]
name = "langchain-ocr-the-hard-way"
version = "0.1.0"
description = ""
authors = [
    {name = "vibhanshuverma02",email = "vibhanshuverma.dpsr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
