[project]
name = "ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "langchain-core (>=0.3.68,<0.4.0)",
    "langchain-ollama (>=0.3.4,<0.4.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
langchain-core = "^0.3.68"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
